# trend-boutique

./: .dockerignore  .gitignore  Makefile  docker-compose.yml  pyproject.toml
services/cart-service/: .dockerignore  .env.example  Dockerfile  main.py  pyproject.toml
services/cart-service/api/v1/: cart.py
services/cart-service/core/: config.py
services/cart-service/db/: session.py
services/cart-service/dependencies/: cart_dependency.py
services/cart-service/repositories/: cart_repository.py
services/cart-service/schemas/: cart.py
services/cart-service/services/: cart_service.py
services/storage-service/: .dockerignore  .env.example  Dockerfile  main.py  pyproject.toml
services/storage-service/core/: config.py  grpc_server.py  r2_service.py
services/storage-service/grpc_services/: storage_service.py
services/storage-service/pb/storage/: storage_pb2.py  storage_pb2.pyi  storage_pb2_grpc.py
services/user-service/: .env.example  Dockerfile  main.py  pyproject.toml
services/user-service/api/v1/: auth.py  users.py
services/user-service/clients/: storage_client.py
services/user-service/core/: config.py  security.py
services/user-service/db/: session.py
services/user-service/db/models/: user.py
services/user-service/dependencies/: auth_dependency.py
services/user-service/repositories/: user_repository.py
services/user-service/schemas/: auth.py  users.py
services/user-service/services/: auth_service.py  user_service.py
shared/: config.py  exceptions.py  pyproject.toml
shared/schemas/: response_schema.py
shared/utils/: auth_utils.py
(+2 files in other folders)
