[project]
name = "storage-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "boto3>=1.42.92",
    "grpcio>=1.80.0",
    "grpcio-tools>=1.80.0",
    "pydantic-settings>=2.13.1",
]

[tool.uv]
package = false